[package]
name = "hash"
version = "0.2.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/hash"
homepage = "https://github.com/stainless-steel/hash"
documentation = "https://stainless-steel.github.io/hash"
description = "The package provides hash functions."

[dependencies]
md5 = "*"
